fixed overflow

--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -8,7 +8,7 @@
 
     @include up(sm) { 
         height: 480px; 
-        top: 300px;
+        top: 400px;
         left: 100px;
         width: 430px;
     }
